# igb-geonode

./: .env  .gitignore  celery.sh  manage.sh  paver.sh  setup.cfg  setup.py  uwsgi.ini  uwsgi.sh
igb/: settings.py
igb/management/commands/: updateldapgroups.py
igb/static/: package-lock.json  package.json
igb/static/css/: site_base.css
igb/static/img/: IGB_Logo_typoEN_2014_4c.eps
igb/static/less/: site_base.less
igb/templates/: site_base.html  site_index.html
requirements/: dev.txt  production.txt
