[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools
install_requires =
    # native dependencies
    psycopg2==2.8.6
    Django==2.2.16
    GeoNode==3.1
    django-sslserver==0.22
    django-environ==0.4.5
    pathlib2==2.3.5
